[gd_scene load_steps=8 format=2]

[ext_resource path="res://sprites/map/ui/Node_Button_1.png" type="Texture" id=1]
[ext_resource path="res://sprites/map/ui/Node_Button_0.png" type="Texture" id=2]
[ext_resource path="res://src/stacked/StackedSprite.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/map/MapNode.gd" type="Script" id=4]
[ext_resource path="res://sprites/map/ui/MapNodeBase.png" type="Texture" id=5]

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("BlinkCover:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=3]
length = 0.3
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("BlinkCover:visible")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="MapNode" type="TextureButton"]
margin_right = 12.0
margin_bottom = 12.0
focus_mode = 0
disabled = true
toggle_mode = true
enabled_focus_mode = 0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 1 )
texture_disabled = ExtResource( 2 )
script = ExtResource( 4 )

[node name="WhiteBottom" type="TextureRect" parent="."]
visible = false
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 5 )

[node name="StackedShadows" type="Node2D" parent="."]
visible = false

[node name="StackedSprite_0" parent="StackedShadows" instance=ExtResource( 3 )]
position = Vector2( 5, 6 )
set_sprites_white = true

[node name="StackedSprite_1" parent="StackedShadows" instance=ExtResource( 3 )]
position = Vector2( 7, 6 )
set_sprites_white = true

[node name="StackedSprite_2" parent="StackedShadows" instance=ExtResource( 3 )]
position = Vector2( 6, 5 )
set_sprites_white = true

[node name="StackedSprite_3" parent="StackedShadows" instance=ExtResource( 3 )]
position = Vector2( 6, 7 )
set_sprites_white = true

[node name="StackedSprite_4" parent="StackedShadows" instance=ExtResource( 3 )]
position = Vector2( 5, 7 )
set_sprites_white = true

[node name="StackedSprite_5" parent="StackedShadows" instance=ExtResource( 3 )]
position = Vector2( 7, 7 )
set_sprites_white = true

[node name="StackedSprite_6" parent="StackedShadows" instance=ExtResource( 3 )]
position = Vector2( 7, 5 )
set_sprites_white = true

[node name="StackedSprite_7" parent="StackedShadows" instance=ExtResource( 3 )]
position = Vector2( 5, 5 )
set_sprites_white = true

[node name="StackedSprite" parent="." instance=ExtResource( 3 )]
visible = false
position = Vector2( 6, 6 )

[node name="BlinkCover" type="TextureRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "RESET"
anims/RESET = SubResource( 4 )
anims/blink = SubResource( 3 )

[connection signal="mouse_entered" from="." to="." method="_on_MapNode_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_MapNode_mouse_exited"]
[connection signal="toggled" from="." to="." method="_on_MapNode_toggled"]
